fix invis goomabs